--- a/packages/container/public/index.html
+++ b/packages/container/public/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
-  <head></head>
+  <head>
+    <title>Micro Frontend App</title>
+  </head>
   <body>
     <div id="root" />
   </body>
